--- a/app/views/bussiness/create_job.erb
+++ b/app/views/bussiness/create_job.erb
@@ -43,7 +43,9 @@
           showAnim: "slide", //애니메이션을 적용한다.
           showMonthAfterYear: true , // 월, 년순의 셀렉트 박스를 년,월 순으로 바꿔준다. 
           dayNamesMin: ['월', '화', '수', '목', '금', '토', '일'], // 요일의 한글 형식.
-          monthNamesShort: ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'] // 월의 한글 형식.    
+          monthNamesShort: ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'], // 월의 한글 형식.    
+          minDate: 0,
+          maxDate: 7
         });
     });
 </script>
@@ -85,8 +87,12 @@
           displayList();
         });
        
-        
-        
+       //오늘날짜
+       var today = new Date();
+       today = dateFormat(today);
+       
+       $('.datepicker').val(today);
+       
        $('#save').on('click', function(){
            //$.post('/bussiness/createJob', { data: JSON.stringify(selectList)}, 
             //function(returnedData){
@@ -109,9 +115,41 @@
             //      }
             //   });
             var f = document.writeForm;
+            
+            if(f.date.value == '') {
+                alert('날짜를 입력해주세요.');
+                return;
+            } else if(f.pay.value == '') {
+                alert('시급을 입력해주세요.');
+                return;
+            } 
+            
             f.data.value = JSON.stringify(selectList);
+            //start시간이 end시간보다 클경우 end date +1하기
+            var endDate = timeCheck(f.time_start_hh.value, f.time_start_mm.value, f.time_end_hh.value, f.time_end_mm.value, f.date.value);
+            
+            //if(endDate == false) {
+            //    alert('한시간 이상 입력');
+            //    return;
+            //}
+            
+            f.time_start.value = f.date.value + ' ' + f.time_start_hh.value + ':' + f.time_start_mm.value + ':00';
+            f.time_end.value = endDate + ' ' + f.time_end_hh.value + ':' + f.time_end_mm.value + ':00';
+            f.pay.value = RemoveComma(f.pay.value);
+            if(f.pay.value < 8350) { //최저시급 체크
+                alert('시급 8,350원이상 입력해주세요.');
+                return;
+            }
+            
+            if($("input:checkbox[id='dayPayment']").is(":checked") == true)
+                f.day_payment.value = 'T';
+            else
+                f.day_payment.value = 'F';
+                
             f.submit();
        });
+       
+       nowTimeCheck();
     });
     
     function displayList() {
@@ -121,6 +159,92 @@
         for(var i = 0; i < selectList.length; i++) {
             $('<span>').text(selectList[i].sort).addClass('select').data('idx', i).appendTo(row);
         }
+    }
+    
+    function timeCheck(time_start_hh, time_start_mm, time_end_hh, time_end_mm, date) {
+        if(Number(time_start_hh) > Number(time_end_hh)) { //시작시간이 끝시간보다 클때(다음날로 넘어감)
+            var tDate = new Date(date);
+            tDate.setDate(tDate.getDate() + 1);
+            tDate = dateFormat(tDate);
+            return tDate;
+        } else if(Number(time_start_hh) < Number(time_end_hh)) {
+            return date;
+        } else if(Number(time_start_hh) == Number(time_end_hh)) {
+            return date;
+        }
+    }
+    
+    function dateFormat(date) {
+        var dd = date.getDate();
+        var mm = date.getMonth()+1; //January is 0!
+        var yyyy = date.getFullYear();
+        
+        if(dd<10) {
+            dd='0'+dd
+        } 
+        
+        if(mm<10) {
+            mm='0'+mm
+        } 
+        
+        date = yyyy + '-' + mm + '-' + dd;
+        return date;
+    }
+    
+    $(function () {
+       $('#input-pay').on('change', function () {
+          var pay = $(this).val();
+          $(this).val(Comma(pay));
+       });
+    });
+    
+    function timeConstraint(optTime, motion) {
+        optTime = optTime + "00";
+		const toDay = new Date();				// 현재 날짜
+		const toYear = toDay.getFullYear().toString();	// 현재 년도
+		// const toMonth = (toDay.getMonth() + 1).toString();
+      	        const toMonth = toDay.getMonth().toString();	// 현재 월(자바스크립트의 특성상 지난 달)
+      	        const toDate = toDay.getDate().toString();		// 현재 일
+      	        
+      	         const toHour = toDay.getHours().toString();
+      	         /*
+      	         * const toMinute = toDay.getMinutes().toString();
+      	         */
+		//const toSecond = toDay.getSeconds().toString();	// 현재 초
+		const choHour = optTime.substring(0, 2);		// 옵션의 시간
+		const choMinute = optTime.substring(2, 4);	// 옵션의 분
+        
+        if(date_to_str(toDay) == writeForm.date.value) {
+            // 셀렉트 박스의 옵션 값을 시간값으로 포맷한다.
+    		const optDay = new Date(toYear, toMonth, toDate, choHour);
+    		var today = new Date(toYear, toMonth, toDate, toHour);
+    		
+    		//현재 날짜랑 선택한 날짜랑 비교
+    		if(optDay >= toDay) {
+    		    return
+    		} else {
+    		    alert("현재시간 이후로 등록해주세요.");
+    		    nowTimeCheck();
+    		}
+        }
+		
+	}
+	
+	function nowTimeCheck() {
+	    var toDay = new Date();
+	    var toHour = toDay.getHours().toString();
+	    if(toHour < 10) toHour = '0' + toHour;
+	    $('#timeStart').val(toHour);
+	}
+	
+	function date_to_str(format)
+    {
+        var year = format.getFullYear();
+        var month = format.getMonth() + 1;
+        if(month<10) month = '0' + month;
+        var date = format.getDate();
+        if(date<10) date = '0' + date;
+        return year + "-" + month + "-" + date;
     }
 </script>
 
@@ -133,19 +257,19 @@
   <div id="container" class="form_wrap gray">
 
         <label for="datepicker">언제 일을 하나요?</label><br />
-        <input class="datepicker frm_default" name="date"><br />
+        <input class="datepicker frm_default" name="date" ><br />
         
-        <select name="time_start" class="frm_default" style="width:130px;">
-            <option value="0">오전 12:00</option>
-            <option value="1">오전 01:00</option>
-            <option value="2">오전 02:00</option>
-            <option value="3">오전 03:00</option>
-            <option value="4">오전 04:00</option>
-            <option value="5">오전 05:00</option>
-            <option value="6">오전 06:00</option>
-            <option value="7">오전 07:00</option>
-            <option value="8">오전 08:00</option>
-            <option value="9">오전 09:00</option>
+        <select name="time_start_hh" class="frm_default" style="width:130px;" id="timeStart" onChange="timeConstraint(this.value, 'passive');">
+            <option value="00">오전 12:00</option>
+            <option value="01">오전 01:00</option>
+            <option value="02">오전 02:00</option>
+            <option value="03">오전 03:00</option>
+            <option value="04">오전 04:00</option>
+            <option value="05">오전 05:00</option>
+            <option value="06">오전 06:00</option>
+            <option value="07">오전 07:00</option>
+            <option value="08">오전 08:00</option>
+            <option value="09">오전 09:00</option>
             <option value="10">오전 10:00</option>
             <option value="11">오전 11:00</option>
             <option value="12">오후 12:00</option>
@@ -160,36 +284,49 @@
             <option value="21">오후 09:00</option>
             <option value="22">오후 10:00</option>
             <option value="23">오후 11:00</option>
-            <option value="24">오후 12:00</option>
-        </select> ~ 
-        <select name="time_end" class="frm_default" style="width:130px;">
-            <option value="0">오전 12:00</option>
-            <option value="1">오전 01:00</option>
-            <option value="2">오전 02:00</option>
-            <option value="3">오전 03:00</option>
-            <option value="4">오전 04:00</option>
-            <option value="5">오전 05:00</option>
-            <option value="6">오전 06:00</option>
-            <option value="7">오전 07:00</option>
-            <option value="8">오전 08:00</option>
-            <option value="9">오전 09:00</option>
-            <option value="10">오전 10:00</option>
-            <option value="11">오전 11:00</option>
-            <option value="12">오후 12:00</option>
-            <option value="13">오후 01:00</option>
-            <option value="14">오후 02:00</option>
-            <option value="15">오후 03:00</option>
-            <option value="16">오후 04:00</option>
-            <option value="17">오후 05:00</option>
-            <option value="18">오후 06:00</option>
-            <option value="19">오후 07:00</option>
-            <option value="20">오후 08:00</option>
-            <option value="21">오후 09:00</option>
-            <option value="22">오후 10:00</option>
-            <option value="23">오후 11:00</option>
-            <option value="24">오후 12:00</option>
         </select>
-
+        <select name="time_start_mm" class="frm_default" style="width:80px;">
+            <option value="00">0분</option>
+            <option value="10">10분</option>
+            <option value="20">20분</option>
+            <option value="30">30분</option>
+            <option value="40">40분</option>
+            <option value="50">50분</option>
+        </select> ~  
+        <select name="time_end_hh" class="frm_default" style="width:130px;">
+            <option value="00">오전 12:00</option>
+            <option value="01">오전 01:00</option>
+            <option value="02">오전 02:00</option>
+            <option value="03">오전 03:00</option>
+            <option value="04">오전 04:00</option>
+            <option value="05">오전 05:00</option>
+            <option value="06">오전 06:00</option>
+            <option value="07">오전 07:00</option>
+            <option value="08">오전 08:00</option>
+            <option value="09">오전 09:00</option>
+            <option value="10">오전 10:00</option>
+            <option value="11">오전 11:00</option>
+            <option value="12">오후 12:00</option>
+            <option value="13">오후 01:00</option>
+            <option value="14">오후 02:00</option>
+            <option value="15">오후 03:00</option>
+            <option value="16">오후 04:00</option>
+            <option value="17">오후 05:00</option>
+            <option value="18">오후 06:00</option>
+            <option value="19">오후 07:00</option>
+            <option value="20">오후 08:00</option>
+            <option value="21">오후 09:00</option>
+            <option value="22">오후 10:00</option>
+            <option value="23">오후 11:00</option>
+        </select>
+        <select name="time_end_mm" class="frm_default" style="width:80px;">
+            <option value="00">0분</option>
+            <option value="10">10분</option>
+            <option value="20">20분</option>
+            <option value="30">30분</option>
+            <option value="40">40분</option>
+            <option value="50">50분</option>
+        </select>
 
         <label for="personnel"> 몇명이 필요하세요?</label>
         <select name="personnel" class="frm_default">
@@ -209,10 +346,10 @@
 
     
      <label for="pay"> 임금을 정해주세요.</label>
-        시급<input type='text' name="pay" class="frm_default" style="width:90%;">원
+        시급<input type='text' name="pay" class="frm_default" id="input-pay" style="width:90%; text-align: right; padding-right: 10px;">원
 
      <label for="pay"> 당일지급체크</label>
-      <input type='checkbox'> 당일지급
+      <input type='checkbox' id="dayPayment"> 당일지급
 
 
     
@@ -316,6 +453,9 @@
     <input type="hidden" name="phone" value=<%= @bussiness.phone %>>
     <input type="hidden" name="y" value=<%= @bussiness.y %>>
     <input type="hidden" name="x" value=<%= @bussiness.x %>>
+    <input type="hidden" name="time_start">
+    <input type="hidden" name="time_end">
+    <input type="hidden" name="day_payment">
     <input type="hidden" name="data">
     
 
