--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,98 +28,55 @@
   input::-webkit-inner-spin-button {
       -webkit-appearance: none;
   }
+  
 </style>
-<div id="wrap" class="index">
-  <h2>Sign up</h2>
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= render "devise/shared/error_messages", resource: resource %>
-<div class="field">
-  <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder: "아이디(이메일)" %>
-</div>
 
-<div class="field">
-  <% if @minimum_password_length %>
+
+<div id="wrap" class="st_info">
+
+<div id="top_title2"><i class="fas fa-chevron-left" onClick="history.back();"></i> 회원가입</div>
+  <div id="container" class="form_wrap gray">
   
+  
+  <%= f.email_field :email, class: "frm_default", autofocus: true, autocomplete: "email",placeholder: "아이디(이메일)" %>
+
+
+  <% if @minimum_password_length %>
   <% end %><br />
-  <%= f.password_field :password,id: "pwd1", autocomplete: "new-password",placeholder: "비밀번호(영문 숫자 특수문자 2가지 이상 6~15자 이내)" %>
-</div>
+  <%= f.password_field :password,id: "pwd1", class: "frm_default", autocomplete: "new-password",placeholder: "비밀번호(영문 숫자 특수문자 2가지 이상 6~15자 이내)" %>
 
-<div class="field">
-  <%= f.password_field :password_confirmation,id: "pwd2", autocomplete: "new-password",placeholder: "비밀번호 확인" %>
-</div>
-<div id="alert-success" style="color:blue">비밀번호가 일치합니다.</div>
-<div id="alert-danger" style="color:red">비밀번호가 일치하지 않습니다.</div>
 
-<div class="field">
-  <%= f.text_field :name, autofocus: true, autocomplete: "name",placeholder: "이름" %>
-</div>
-<div class="field">
-  <%= f.number_field :phone, autofocus: true, autocomplete: "phone",placeholder: "휴대폰 번호" %>
-</div>
+  <%= f.password_field :password_confirmation,id: "pwd2", class: "frm_default", autocomplete: "new-password",placeholder: "비밀번호 확인" %>
+
+<div id="alert-success">비밀번호가 일치합니다.</div>
+<div id="alert-danger">비밀번호가 일치하지 않습니다.</div>
+
+  <%= f.text_field :name, class: "frm_default", autofocus: true, autocomplete: "name",placeholder: "이름" %>
+
+
+  <%= f.number_field :phone, class: "frm_default", autofocus: true, autocomplete: "phone",placeholder: "휴대폰 번호('-'빼고 입력해 주세요)" %>
+
 
 <!--<div id="addressAlba">
   <%= f.label :주소 %><br />
-  <%= f.text_field :address1, autofocus: true, autocomplete: "address" ,placeholder: "주소" , id: "sample5_address" %>
+  <%= f.text_field :address1, class: "frm_default", autofocus: true, autocomplete: "address" ,placeholder: "주소" , id: "sample5_address" %>
   <input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
   <%= f.label :상세주소 %><br />
-  <%= f.text_field :address2, autofocus: true, autocomplete: "address" ,placeholder: "상세주소" %>
+  <%= f.text_field :address2, class: "frm_default", autofocus: true, autocomplete: "address" ,placeholder: "상세주소" %>
   <div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
 </div>-->
 
 <br/>
 <div class="actions">
-  <%= f.submit "동의하고 가입하기" , onclick: "return confirm('개인정보 동의');" %>
+  <%= f.submit "동의하고 가입하기" , class:"btn_apply", onclick: "return confirm('개인정보 동의');" %>
 </div>
 <%end%>
 <script src="https://spi.maps.daum.net/imap/map_js_init/postcode.v2.js"></script>
-<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=be0c46214d2670f3e69a09c08a859260&libraries=services"></script>
-<script>
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-        mapOption = {
-            center: new daum.maps.LatLng(37.537187, 127.005476), // 지도의 중심좌표
-            level: 5 // 지도의 확대 레벨
-        };
 
-    //지도를 미리 생성
-    var map = new daum.maps.Map(mapContainer, mapOption);
-    //주소-좌표 변환 객체를 생성
-    var geocoder = new daum.maps.services.Geocoder();
-    //마커를 미리 생성
-    var marker = new daum.maps.Marker({
-        position: new daum.maps.LatLng(37.537187, 127.005476),
-        map: map
-    });
-
-
-    function sample5_execDaumPostcode() {
-        new daum.Postcode({
-            oncomplete: function(data) {
-                var addr = data.address; // 최종 주소 변수
-
-                // 주소 정보를 해당 필드에 넣는다.
-                document.getElementById("sample5_address").value = addr;
-                // 주소로 상세 정보를 검색
-                geocoder.addressSearch(data.address, function(results, status) {
-                    // 정상적으로 검색이 완료됐으면
-                    if (status === daum.maps.services.Status.OK) {
-
-                        var result = results[0]; //첫번째 결과의 값을 활용
-
-                        // 해당 주소에 대한 좌표를 받아서
-                        var coords = new daum.maps.LatLng(result.y, result.x);
-                        // 지도를 보여준다.
-                        mapContainer.style.display = "block";
-                        map.relayout();
-                        // 지도 중심을 변경한다.
-                        map.setCenter(coords);
-                        // 마커를 결과값으로 받은 위치로 옮긴다.
-                        marker.setPosition(coords)
-                    }
-                });
-            }
-        }).open();
-    }
-</script>
 </div>
