--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
     <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-    <script src="//code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.css" />
 <script src="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 <script>
   function createToast(t) {
     switch (t) {
@@ -73,9 +75,10 @@
     
     
   </head>
- 
+
 
   <body>
+
     <%# if user_signed_in? %>
         
         <%#= link_to "MyPage", mypage_main_path %>
@@ -94,9 +97,10 @@
               <ul>
                   <li id="menu_active" onclick="location.href='/active/'"></li>
                   <li id="menu_favorites"></li>
-                  <li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>
                   <li id="menu_application"></li>
                   <li id="menu_mypage"></li>
+                  <!--<li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>-->
+                  
 
               </ul>
             
@@ -107,9 +111,9 @@
               <ul>
                   <li id="menu_active"></li>
                   <li id="menu_favorites"></li>
-                  <li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>
                   <li id="menu_application"></li>
                   <li id="menu_mypage"></li>
+                  <!--<li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>-->
 
               </ul>
             
