--- a/app/views/mypage/main.html.erb
+++ b/app/views/mypage/main.html.erb
@@ -1,9 +1,4 @@
 
-<!--<img src="<%=current_user.profileImg%>" alt="등록된 프로필 사진이 없습니다.">-->
-
-
-
-
     <div id="wrap"><!--wrap-->
 
         <div id="profile">
@@ -21,7 +16,7 @@
                 <%if current_user.provider == 'kakao'%><!--kakao 로그인 한 회원-->
                     <%=current_user.provider%>연동<br/>
                     <%=current_user.bankName%><%=current_user.accountNum%>    
-                <%elsif current_user.profile == 'naver'%><!--naver 로그인 한 회원-->
+                <%elsif current_user.provider == 'naver'%><!--naver 로그인 한 회원-->
                     <%=current_user.provider%>연동<br/>
                     <%=current_user.bankName%><%=current_user.accountNum%>
                 <%else%>
